restart ui projects wit MudBlazor, add Thema etc

--- a/src/YellowCarRental.Frontend.CallCenter/YellowCarRental.Frontend.CallCenter.Client/YellowCarRental.Frontend.CallCenter.Client.csproj
+++ b/src/YellowCarRental.Frontend.CallCenter/YellowCarRental.Frontend.CallCenter.Client/YellowCarRental.Frontend.CallCenter.Client.csproj
@@ -10,7 +10,11 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" />
+        <PackageReference Include="MudBlazor" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\..\YellowCarRental.Frontend.Shared.Components\YellowCarRental.Frontend.Shared.Components.csproj" />
     </ItemGroup>
 
 </Project>
