--- a/src/YellowCarRental.Frontend.Public/YellowCarRental.Frontend.Public.Client/YellowCarRental.Frontend.Public.Client.csproj
+++ b/src/YellowCarRental.Frontend.Public/YellowCarRental.Frontend.Public.Client/YellowCarRental.Frontend.Public.Client.csproj
@@ -17,4 +17,8 @@
         <ProjectReference Include="..\..\YellowCarRental.Frontend.Shared.Components\YellowCarRental.Frontend.Shared.Components.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Models\" />
+    </ItemGroup>
+
 </Project>
