--- a/src/YellowCarRental.Frontend.Shared.Components/YellowCarRental.Frontend.Shared.Components.csproj
+++ b/src/YellowCarRental.Frontend.Shared.Components/YellowCarRental.Frontend.Shared.Components.csproj
@@ -10,6 +10,7 @@
         <!-- Rely on package references only to be compatible with WASM consumers -->
         <PackageReference Include="MudBlazor" />
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" PrivateAssets="all" />
+        <PackageReference Include="MudBlazor.Extensions" />
     </ItemGroup>
 
     <ItemGroup>
@@ -18,6 +19,11 @@
         <Compile Remove="Areas\**\*.cshtml.cs" />
         <Content Remove="Areas\**" />
         <None Remove="Areas\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\YellowCarRent.Frontend.ApiClient\YellowCarRent.Frontend.ApiClient.csproj" />
+      <ProjectReference Include="..\YellowCarRental.Domain\YellowCarRental.Domain.csproj" />
     </ItemGroup>
 
 </Project>
