--- a/src/YellowCarRental.Application/YellowCarRental.Application.csproj
+++ b/src/YellowCarRental.Application/YellowCarRental.Application.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\YellowCarRental.Api.Contracts\YellowCarRental.Api.Contracts.csproj" />
+      <ProjectReference Include="..\YellowCarRental.Application.Contracts\YellowCarRental.Application.Contracts.csproj" />
       <ProjectReference Include="..\YellowCarRental.Domain\YellowCarRental.Domain.csproj" />
     </ItemGroup>
 
