--- a/src/YellowCarRental.Frontend.Public/YellowCarRental.Frontend.Public.Client/YellowCarRental.Frontend.Public.Client.csproj
+++ b/src/YellowCarRental.Frontend.Public/YellowCarRental.Frontend.Public.Client/YellowCarRental.Frontend.Public.Client.csproj
@@ -9,7 +9,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly"/>
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly"/>       
+        <PackageReference Include="Microsoft.Extensions.ServiceDiscovery" />
         <PackageReference Include="MudBlazor"/>
     </ItemGroup>
 
