--- a/src/AppHost/AppHost.csproj
+++ b/src/AppHost/AppHost.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
         <PackageReference Include="Aspire.Hosting.AppHost" />
         <PackageReference Include="Aspire.Hosting.Oracle" />
+        <PackageReference Include="Aspire.Oracle.EntityFrameworkCore" />
         <PackageReference Include="Keycloak.AuthServices.Aspire.Hosting" />
     </ItemGroup>
 
