--- a/src/YellowCarRental.Api/appsettings.json
+++ b/src/YellowCarRental.Api/appsettings.json
@@ -1,8 +1,11 @@
-{
+{  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },  
+  },
+  "ConnectionStrings": {
+    "oracleDb": "Data Source=TORCL;User Id=OracleUser;Password=Non-default-P@ssw0rd;"
+  }
 }
