add oracle provider

--- a/src/AppHost/AppHost.csproj
+++ b/src/AppHost/AppHost.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Aspire.Hosting.AppHost" />
     <PackageReference Include="Aspire.Hosting.Docker" />
     <PackageReference Include="Aspire.Hosting.Oracle" />
+    <PackageReference Include="Aspire.Oracle.EntityFrameworkCore" />
     <PackageReference Include="Keycloak.AuthServices.Aspire.Hosting" />
   </ItemGroup>
   <ItemGroup>
