fix url problems

--- a/src/YellowCarRental.Frontend.CallCenter/YellowCarRental.Frontend.CallCenter.Client/appsettings.Development.json
+++ b/src/YellowCarRental.Frontend.CallCenter/YellowCarRental.Frontend.CallCenter.Client/appsettings.Development.json
@@ -6,5 +6,5 @@
             "Microsoft": "Information"
         }
     },
-    "ApiBaseUrl": "http://localhost:5185"
+    "ApiBaseUrl": "https://localhost:7207"
 }
