--- a/src/YellowCarRental.Api/appsettings.Development.json
+++ b/src/YellowCarRental.Api/appsettings.Development.json
@@ -5,5 +5,5 @@
       "Microsoft.AspNetCore": "Debug"
     }
   },
-  "AllowedCorsOrigins": "http://localhost:5059,http://localhost:5124,http://localhost:5185"
+  "AllowedCorsOrigins": "http://localhost:5059,http://localhost:5124,http://localhost:5185,https://localhost:7207,https://localhost:7260,https://localhost:7261"
 }
