--- a/src/YellowCarRental.Frontend.CallCenter/YellowCarRental.Frontend.CallCenter/appsettings.Development.json
+++ b/src/YellowCarRental.Frontend.CallCenter/YellowCarRental.Frontend.CallCenter/appsettings.Development.json
@@ -2,7 +2,9 @@
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
-      "Microsoft.AspNetCore": "Warning"
+      "System": "Information",
+      "Microsoft": "Information"
     }
-  }  
+  },
+  "ApiBaseUrl": "https://localhost:7207"
 }
