--- a/src/YellowCarRental.Frontend.Public/YellowCarRental.Frontend.Public/appsettings.Development.json
+++ b/src/YellowCarRental.Frontend.Public/YellowCarRental.Frontend.Public/appsettings.Development.json
@@ -5,5 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ApiBaseUrl": "http://localhost:5185"
+  "ApiBaseUrl": "https://localhost:7207"
 }
